Implement NavigationView with Nav Component

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.kakyiretechnologies.navigationcomponent">
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NavigationComponent">
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".navigationui.BottomNavActivity">
+        android:theme="@style/Theme.NavigationComponent"
+        tools:ignore="AllowBackup">
+        <activity android:name=".navigationui.BottomNavActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".navigationui.NavigationViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
